--- a/projects/tribute/index.html
+++ b/projects/tribute/index.html
@@ -28,44 +28,44 @@
                 <h1 id="title">Florence Nightingale</h1>
                 <p> The founder of modern nursing</p1>
                     <figure id="img-div">
-                        <img id="image" src="image/Nurse.jpg" alt="Florence Nightingale holding lamb to check on patients "/>
-                        <figcaption id="img-caption"> Florence Nightingale is using a lamp to check on patients in a hospital</figcaption>
+                        <img id="image" src="image/Florence_students.jpg" alt="Florence Nightingale holding lamb to check on patients "/>
+                        <figcaption id="img-caption"> Florence Nightingale(middle) with her graduationg class of nurses</figcaption>
                     </figure>
                     <section id="tribute-info">
                         <h3 id="headline">Here is a time line for Florence Nightingale:</h3>
                         <ul>
-                            <li><strong>1820</strong> - Bron in Florence, Itally</li>
+                            <li><b>1820</b> - Bron in Florence, Itally</li>
 
-                            <li><strong>1821</strong> - Her family moved back to England. Florence and her older sister Parthenope benefited from their fahter's advanced ideas about women's education. Therefore, they studied history, mathematics, Itallian, clasical liteture and philosophy from an early age</li>
+                            <li><b>1821</b> - Her family moved back to England. Florence and her older sister Parthenope benefited from their fahter's advanced ideas about women's education. Therefore, they studied history, mathematics, Itallian, clasical liteture and philosophy from an early age</li>
 
-                            <li><strong>1837</strong> - Florence underwent the first several expreinces that she believed were calls from God, prompting a strong desire to devote her life to the service of others</li>
+                            <li><b>1837</b> - Florence underwent the first several expreinces that she believed were calls from God, prompting a strong desire to devote her life to the service of others</li>
 
-                            <li><strong>1844</strong> - In her youth years she was respectful of her family's opposition to her working as a nurse, only announcing her decision to enter the field in this year</li>
+                            <li><b>1844</b> - In her youth years she was respectful of her family's opposition to her working as a nurse, only announcing her decision to enter the field in this year</li>
 
-                            <li><strong>1847</strong> - In Rome, she met Sidney Herbert, a politican who had been secretary at war. Hebert would be secretary of war again during Crimean war, when he would help her by faciliating Nightingale nursing work in Crimean war</li>
+                            <li><b>1847</b> - In Rome, she met Sidney Herbert, a politican who had been secretary at war. Hebert would be secretary of war again during Crimean war, when he would help her by faciliating Nightingale nursing work in Crimean war</li>
 
-                            <li><strong>1850</strong> - She visited the Lutheran religious community in Germany and met with its Paster and decided to work fo the sick and deprived</li>
+                            <li><b>1850</b> - She visited the Lutheran religious community in Germany and met with its Paster and decided to work fo the sick and deprived</li>
 
-                            <li><strong>1853</strong> - Nightingale took the post of superindendent at the Institute for the Care of Sick Genttle Woment in London</li>
+                            <li><b>1853</b> - Nightingale took the post of superindendent at the Institute for the Care of Sick Genttle Woment in London</li>
 
-                            <li><strong>1854</strong> - Florence Nightingale and the staff of 38 women who were volunteer nurses that she trained were sent to the main British camp to help soliders in Crimean war</li>
+                            <li><b>1854</b>- Florence Nightingale and the staff of 38 women who were volunteer nurses that she trained were sent to the main British camp to help soliders in Crimean war</li>
 
-                            <li><strong>1860</strong> - Nightingale set up the Nightingale Training school at St. Thomas's hospital</li>
+                            <li><b>1860</b> - Nightingale set up the Nightingale Training school at St. Thomas's hospital</li>
 
-                            <li><strong>1870</strong> - Nightingale mentored Linda Rihcard, "America's first trained nurse" and enabled her to return to the United States to establish high-quality nursing schools</li>
+                            <li><b>1870</b> - Nightingale mentored Linda Rihcard, "America's first trained nurse" and enabled her to return to the United States to establish high-quality nursing schools</li>
 
-                            <li><strong>1883</strong> - Nightingale became first reciepient of Royal Red Cross</li>
+                            <li><b>1883</b> - Nightingale became first reciepient of Royal Red Cross</li>
 
-                            <li><strong>1904</strong> - She was appointed a reward called "Lady of Graceof the order of St. John"</li>
+                            <li><b>1904</b> - She was appointed a reward called "Lady of Graceof the order of St. John"</li>
 
-                            <li><strong>1907</strong> - She became the first woman to be awarded the order of Merit</li>
+                            <li><b>1907</b> - She became the first woman to be awarded the order of Merit</li>
 
-                            <li><strong>1910</strong> - died peacefully at age of 90</li>
+                            <li><b>1910</b> - died peacefully at age of 90</li>
 
 
                         </ul>
                         <blockquote>
-                            <p>"Live your life while you have it. Life is splendid gift.But to live your life, you must discipline it."</p>
+                            <p><b>"Live your life while you have it. Life is splendid gift.But to live your life, you must discipline it."</b></p>
                         
                         <cite>-- Florence Nightingale</cite>
                         </blockquote>
