--- a/projects/tribute/index.html
+++ b/projects/tribute/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html lang="en">
-
+/**/
     <head>
         <meta charset="utf-8" />
 
@@ -65,10 +65,11 @@
 
                         </ul>
                         <blockquote>
-                            <p><b>"Live your life while you have it. Life is splendid gift.But to live your life, you must discipline it."</b></p>
+                            <p>"Live your life while you have it. Life is splendid gift.But to live your life, you must discipline it."</p>
                         
                         <cite>-- Florence Nightingale</cite>
                         </blockquote>
+ 
                         <h3> If you have time, please check me, Anahita Firoozi, at my <a id="freecodecamp-link" href="https://www.freecodecamp.org/afirooz123" target="_blank">FreeCodeCamp</a>!</h3>
                     </section>
                 
